feat: authenticate service
